Drei tex Dateien erstellt
Ich hab schon mal drei ausgelagerte .tex Dateien erstellt, auf denen wir getrennt arbeiten können.

--- a/beamer/SACbeamer.tex
+++ b/beamer/SACbeamer.tex
@@ -20,12 +20,10 @@
 \titlepage
 \end{frame}
 
-%\begin{frame}
-%\tableofcontents
-%\end{frame}
+\input{Part_1.tex}	%Oliver	-Anfang bis 4.2
 
-\begin{frame}{•}
+\input{Part_2.tex}	%Leon	-4.2 bis 5
 
-\end{frame}
+\input{Part_3.tex}	%Thilo	-5 bis Ende
 
 \end{document}
