added Conclusion and table of contents tex

--- a/beamer/SACbeamer.tex
+++ b/beamer/SACbeamer.tex
@@ -24,8 +24,11 @@
 %\tableofcontents
 %\end{frame}
 
-\begin{frame}{•}
+\begin{frame}{Inhaltsverzeichnis}
+    \tableofcontents
 
 \end{frame}
+
+\include{./Conclusion}
 
 \end{document}
