added Table of Contents and resolved conflicts

--- a/beamer/SACbeamer.tex
+++ b/beamer/SACbeamer.tex
@@ -20,12 +20,17 @@
 \titlepage
 \end{frame}
 
+
+\begin{frame}
+    \frametitle{Contents}
+    \tiny{\tableofcontents[currentsection]}
+\end{frame}
+
+
 \input{Part_1.tex}	%Oliver	-Anfang bis 4.2
 
 \input{Part_2.tex}	%Leon	-4.2 bis 5
 
 \input{Part_3.tex}	%Thilo	-5 bis Ende
-
-\include{./Conclusion}
 
 \end{document}
