--- a/beamer/Part_3.tex
+++ b/beamer/Part_3.tex
@@ -1,3 +1,9 @@
-\begin{frame}{Part 3}
-
+\section*{Ergbnisse}
+\begin{frame}
+    \frametitle{Conclusion}
+    \begin{itemize}    
+        \item Was haben wir bisher gesehen
+        \item Performance im Vergleich zu TD3 und A2C
+        \item Vor- und Nachteile von SAC
+    \end{itemize}
 \end{frame}
