--- a/beamer/Part_3.tex
+++ b/beamer/Part_3.tex
@@ -2,8 +2,29 @@
 \begin{frame}
     \frametitle{Conclusion}
     \begin{itemize}    
-        \item Was haben wir bisher gesehen
         \item Performance im Vergleich zu TD3 und A2C
         \item Vor- und Nachteile von SAC
     \end{itemize}
 \end{frame}
+
+\begin{frame}{Performance}
+    \begin{itemize}
+        \item SAC soll stabiler laufen als TD3 Algorithmen
+        \item Testumgebung gym
+    \end{itemize}    
+\end{frame}
+
+
+\begin{frame}{Einstellungen SAC in Testumgebung}
+        
+\end{frame}
+
+\begin{frame}{Testergebisse}
+        
+\end{frame}
+
+
+\begin{frame}{Zusammenfassung}
+        
+\end{frame}
+
