--- a/beamer/SACbeamer.tex
+++ b/beamer/SACbeamer.tex
@@ -6,14 +6,14 @@
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
-%\author{}
-\title{SAC}
+\author{Oliver, Leon, Thilo Röthemeyer}
+\title{Soft Actor Critic}
 %\setbeamercovered{transparent} 
 %\setbeamertemplate{navigation symbols}{} 
 %\logo{} 
 %\institute{} 
 %\date{} 
-%\subject{} 
+\subject{Soft Actor Critic} 
 \begin{document}
 
 \begin{frame}
