Folien mit Inhalt gefüllt

--- a/beamer/Part_3.tex
+++ b/beamer/Part_3.tex
@@ -15,16 +15,55 @@
 \end{frame}
 
 
-\begin{frame}{Einstellungen SAC in Testumgebung}
-        
+\begin{frame}{Ziel der Experimente}
+        \begin{itemize}
+            \item Stabilität und Sample Komplexität im Vergleich zu anderen Algorithmen
+            \begin{itemize}
+                \item kontinuierliche Aufgaben
+            \end{itemize}  
+            \item OpenAI gym und rllab
+            \begin{itemize}
+                \item schwierig für off-policy Algorithmen
+                \item Parametertuning bei komplexeren Aufgaben schwierig
+            \end{itemize}
+        \end{itemize}
 \end{frame}
 
-\begin{frame}{Testergebisse}
+\begin{frame}{Vergleich zu anderen Algorithmen}
+    \begin{itemize}
+        \item SAC
+        \begin{itemize}
+            \item mean action
+        \end{itemize} 
+        \item DDPG
+        \item PPO
+        \item SQL mit zwei Q Funktionen
+        \begin{itemize}
+            \item evaluated with exploration noise
+        \end{itemize}
+        \item TD3
+    \end{itemize}
         
+\end{frame}
+\begin{frame}
+    \frametitle{Ergebnisse}
+    \begin{itemize}
+        \item f
+    \end{itemize}
+
+    
+
 \end{frame}
 
 
 \begin{frame}{Zusammenfassung}
-        
+        \begin{itemize}
+            \item soft actor critic vorgestellt
+            \begin{itemize}
+                \item off policy
+                \item Entropiemaximierung verbessert Stabilität
+                \item Besser als state of the art Algorithmen 
+            \end{itemize} 
+        \end{itemize}
 \end{frame}
 
