--- a/beamer/SACbeamer.tex
+++ b/beamer/SACbeamer.tex
@@ -6,7 +6,7 @@
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
-\author{Oliver, Leon, Thilo Röthemeyer}
+\author{Oliver, Leon Büttinghaus, Thilo Röthemeyer}
 \title{Soft Actor Critic}
 %\setbeamercovered{transparent} 
 %\setbeamertemplate{navigation symbols}{} 
