--- a/beamer/Part_3.tex
+++ b/beamer/Part_3.tex
@@ -45,14 +45,45 @@
     \end{itemize}
         
 \end{frame}
+
 \begin{frame}
     \frametitle{Ergebnisse}
-    \begin{itemize}
-        \item f
-    \end{itemize}
+    \includegraphics[scale=0.8]{figures/humanoid-rllab.pdf}
+\end{frame}
+\note{
+    DDPG = Deep Deterministic Policy Gradiend 
+    TD3 =  Twin deep Deterministic gradiend
+}
+\begin{frame}
+    \frametitle{Ergebnisse}
+    \includegraphics[scale=0.8]{figures/humanoid-gym.pdf}
+\end{frame}
+\begin{frame}
+    \frametitle{Ergebnisse}
+    \includegraphics[scale=0.8]{figures/humanoid-gym-backup-2.pdf}
+\end{frame}
 
-    
 
+\begin{frame}
+    \frametitle{Ergebnisse}
+    \includegraphics[scale=0.8]{figures/half-cheetah.pdf}
+\end{frame}
+\begin{frame}
+    \frametitle{Ergebnisse}
+    \includegraphics[scale=0.8]{figures/hopper.pdf}
+\end{frame}
+\begin{frame}
+    \frametitle{Ergebnisse}
+    \includegraphics[scale=0.8]{figures/seeds-humanoid.pdf}
+\end{frame}
+\begin{frame}
+    \frametitle{Ergebnisse}
+    \includegraphics[scale=0.8]{figures/walker.pdf}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Ergebnisse}
+    \includegraphics[scale=0.8]{figures/ant.pdf}
 \end{frame}
 
 
