Fehler im Table of Contents behoben

--- a/beamer/Part_3.tex
+++ b/beamer/Part_3.tex
@@ -1,4 +1,4 @@
-\section*{Ergbnisse}
+\section{Ergebnisse}
 %\begin{frame}
 %    \frametitle{Conclusion}
 %    \begin{itemize}    
@@ -44,6 +44,7 @@
         
 \end{frame}
 
+\subsection{Vergleich mit anderen Algortihmen}
 \begin{frame}
     \frametitle{Ergebnisse}
     \includegraphics[scale=0.8]{figures/humanoid-rllab.pdf}
@@ -84,7 +85,7 @@
     \includegraphics[scale=0.8]{figures/ant.pdf}
 \end{frame}
 
-
+\subsection{Zusammenfassung}
 \begin{frame}{Zusammenfassung}
         \begin{itemize}
             \item soft actor critic vorgestellt
