--- a/beamer/SACbeamer.tex
+++ b/beamer/SACbeamer.tex
@@ -33,4 +33,11 @@
 
 \input{Part_3.tex}	%Thilo	-5 bis Ende
 
+\section{Literaturverzeichnis}
+\begin{frame}
+\nocite{SAC18}
+\bibliography{Bibliography}
+\bibliographystyle{alpha}
+\end{frame}
+
 \end{document}
