--- a/beamer/Bibliography.bib
+++ b/beamer/Bibliography.bib
@@ -1,17 +1,41 @@
+@article{DBLP:journals/corr/abs-1812-05905,
+  author        = {Tuomas Haarnoja and
+               Aurick Zhou and
+               Kristian Hartikainen and
+               George Tucker and
+               Sehoon Ha and
+               Jie Tan and
+               Vikash Kumar and
+               Henry Zhu and
+               Abhishek Gupta and
+               Pieter Abbeel and
+               Sergey Levine},
+  title         = {Soft Actor-Critic Algorithms and Applications},
+  journal       = {CoRR},
+  volume        = {abs/1812.05905},
+  year          = {2018},
+  url           = {http://arxiv.org/abs/1812.05905},
+  archiveprefix = {arXiv},
+  eprint        = {1812.05905},
+  timestamp     = {Tue, 01 Jan 2019 15:01:25 +0100},
+  biburl        = {https://dblp.org/rec/journals/corr/abs-1812-05905.bib},
+  bibsource     = {dblp computer science bibliography, https://dblp.org}
+}
+
 @article{SAC18,
-  author    = {Tuomas Haarnoja and
+  author        = {Tuomas Haarnoja and
                Aurick Zhou and
                Pieter Abbeel and
                Sergey Levine},
-  title     = {Soft Actor-Critic: Off-Policy Maximum Entropy Deep Reinforcement Learning
+  title         = {Soft Actor-Critic: Off-Policy Maximum Entropy Deep Reinforcement Learning
                with a Stochastic Actor},
-  journal   = {CoRR},
-  volume    = {abs/1801.01290},
-  year      = {2018},
-  url       = {http://arxiv.org/abs/1801.01290},
-  archivePrefix = {arXiv},
-  eprint    = {1801.01290},
-  timestamp = {Mon, 13 Aug 2018 16:48:10 +0200},
-  biburl    = {https://dblp.org/rec/journals/corr/abs-1801-01290.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+  journal       = {CoRR},
+  volume        = {abs/1801.01290},
+  year          = {2018},
+  url           = {http://arxiv.org/abs/1801.01290},
+  archiveprefix = {arXiv},
+  eprint        = {1801.01290},
+  timestamp     = {Mon, 13 Aug 2018 16:48:10 +0200},
+  biburl        = {https://dblp.org/rec/journals/corr/abs-1801-01290.bib},
+  bibsource     = {dblp computer science bibliography, https://dblp.org}
 }
