--- a/beamer/Part_3.tex
+++ b/beamer/Part_3.tex
@@ -1,12 +1,4 @@
 \section{Ergebnisse}
-%\begin{frame}
-%    \frametitle{Conclusion}
-%    \begin{itemize}    
-%        \item Performance im Vergleich zu TD3 und A2C
-%        \item Vor- und Nachteile von SAC
-%    \end{itemize}
-%\end{frame}
-
 
 \begin{frame}{Ziel der Experimente}
         \begin{itemize}
@@ -23,41 +15,45 @@
     \begin{itemize}
         \item SAC
         \begin{itemize}
-            \item mean action
-            \item feste und variable Temperatur
+            \item Durchschnittswert (mean action)
+            \item feste und variable Temperatur(Anpassung im neuen Paper)
         \end{itemize} 
-        \item PPO
-        \item DDPG
+        \item PPO, DDPG
+        \begin{itemize}
+            \item kein Explorationsrauschen
+        \end{itemize}
         \item TD3
         \item SQL mit zwei Q Funktionen
         \begin{itemize}
-            \item evaluated with exploration noise
-        
+            \item Evaluation mit Explorationsrauschen        
         \end{itemize}
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Vergleich zu anderen Algorithmen}
+    \begin{itemize}     
         \item 5 Instanzen mit einer Evaluation alle 1000 Schritte
         \item Total average return shown in the following
-        \item schattierter Verlauf sind alle fünf Durchläufe
+        \item Schattierter Verlauf zeigt min und max der fünf Durchläufe
         
     \end{itemize}
-        
+    
 \end{frame}
 
 \subsection{Vergleich mit anderen Algortihmen}
 \note{
     DDPG = Deep Deterministic Policy Gradiend 
     TD3 =  Twin deep Deterministic gradiend
+    PPO = Proximal Policy Optimization
 }
 \begin{frame}
     \frametitle{Ergebnisse}
     \includegraphics[width=.3\textwidth]{figures/humanoid-rllab.pdf}\hfill
     \includegraphics[width=.3\textwidth]{figures/humanoid-gym.pdf}\hfill
-    \includegraphics[width=.3\textwidth]{figures/humanoid-gym-backup-2.pdf}\hfill
-
     \includegraphics[width=.3\textwidth]{figures/half-cheetah.pdf}
-    \includegraphics[width=.3\textwidth]{figures/hopper.pdf}\hfill
-    \includegraphics[width=.3\textwidth]{figures/hopper.pdf}\hfill
-    \includegraphics[width=.28\textwidth]{figures/ant.pdf}\hfill
 
+    \includegraphics[width=.3\textwidth]{figures/hopper.pdf}\hfill
+    \includegraphics[width=.3\textwidth]{figures/ant.pdf}\hfill
     \includegraphics[width=.3\textwidth]{figures/walker.pdf}\hfill
     
 \end{frame}
@@ -73,9 +69,10 @@
         \begin{itemize}
             \item soft actor critic vorgestellt
             \begin{itemize}
-                \item off policy
+                \item off policy Algorithmus
                 \item Entropiemaximierung verbessert Stabilität
-                \item Besser als state of the art Algorithmen 
+                \item Besser als state-of-the-art Algorithmen 
+                \item Gradientenbasiertes Temperatur Tuning
             \end{itemize} 
         \end{itemize}
 \end{frame}
