--- a/beamer/Part_3.tex
+++ b/beamer/Part_3.tex
@@ -4,8 +4,8 @@
         \begin{itemize}
             \item Stabilität und Sample Komplexität im Vergleich zu anderen Algorithmen
             \begin{itemize}
-                \item kontinuierliche Aufgaben
-                \item verschiedene Schwierigkeitgrade
+                \item Kontinuierliche Aufgaben
+                \item Verschiedene Schwierigkeitgrade
             \end{itemize}  
             \item OpenAI gym und rllab
         \end{itemize}
@@ -33,9 +33,7 @@
 \begin{frame}{Vergleich zu anderen Algorithmen}
     \begin{itemize}     
         \item 5 Instanzen mit einer Evaluation alle 1000 Schritte
-        \item Total average return shown in the following
         \item Schattierter Verlauf zeigt min und max der fünf Durchläufe
-        
     \end{itemize}
     
 \end{frame}
@@ -58,10 +56,10 @@
     
 \end{frame}
 
-\begin{frame}
-    \frametitle{Ergebnisse}
-    \includegraphics[width=0.8\textwidth]{figures/seeds-humanoid.pdf}
-\end{frame}
+%\begin{frame}
+%    \frametitle{Ergebnisse}
+%    \includegraphics[width=0.8\textwidth]{figures/seeds-humanoid.pdf}
+%\end{frame}
 
 
 \subsection{Zusammenfassung}
@@ -69,7 +67,7 @@
         \begin{itemize}
             \item soft actor critic vorgestellt
             \begin{itemize}
-                \item off policy Algorithmus
+                \item Off policy Algorithmus
                 \item Entropiemaximierung verbessert Stabilität
                 \item Besser als state-of-the-art Algorithmen 
                 \item Gradientenbasiertes Temperatur Tuning
