--- a/beamer/SACbeamer.tex
+++ b/beamer/SACbeamer.tex
@@ -6,6 +6,8 @@
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
+\usepackage[ruled,vlined]{algorithm2e}
+
 \author{Oliver, Leon Büttinghaus, Thilo Röthemeyer}
 \title{Soft Actor Critic}
 %\setbeamercovered{transparent} 
