--- a/beamer/Part_3.tex
+++ b/beamer/Part_3.tex
@@ -53,7 +53,7 @@
     \includegraphics[width=.3\textwidth]{figures/hopper.pdf}\hfill
     \includegraphics[width=.3\textwidth]{figures/ant.pdf}\hfill
     \includegraphics[width=.3\textwidth]{figures/walker.pdf}\hfill
-    
+    \cite{DBLP:journals/corr/abs-1812-05905}
 \end{frame}
 
 %\begin{frame}
