Änderung beamer style
.sty mit neuem beamer style hinzugefügt. Zwei logos für den style hinzugefügt. Style für Vortrag zu neuem style geändert.

--- a/beamer/Part_2.tex
+++ b/beamer/Part_2.tex
@@ -77,7 +77,7 @@ $J_{\pi}(\phi)=\mathbb{E}_{s_{t}\sim D,\epsilon_{t}\sim N}\left[log\pi_{\phi}(f_
 %======SAC Algorithmus============
 \subsection{SAC Algorithmus}
 
-\begin{frame}{Algorithmus (1/2)}
+\begin{frame}{Algorithmus}
 \begin{algorithm}[H]
 {\small
 \SetAlgoLined
@@ -100,9 +100,15 @@ Initialize parameter vectors $\psi$,$\overline{\psi}$,$\theta$,$\phi$\\
 \end{algorithm}
 \end{frame}
 
-\begin{frame}{Algorithmus (2/2)}
 
-\end{frame}
+
+
+
+
+
+
+
+
 
 
 
