--- a/beamer/SACbeamer.tex
+++ b/beamer/SACbeamer.tex
@@ -1,5 +1,6 @@
 \documentclass[11pt]{beamer}
-\usetheme{Warsaw}
+\usetheme{tufi}
+%\usetheme{Warsaw}
 \usepackage[utf8]{inputenc}
 \usepackage[german]{babel}
 \usepackage[T1]{fontenc}
