--- a/beamer/SACbeamer.tex
+++ b/beamer/SACbeamer.tex
@@ -9,7 +9,7 @@
 \usepackage{amssymb}
 \usepackage[ruled,vlined]{algorithm2e}
 
-\author{Oliver, Leon Büttinghaus, Thilo Röthemeyer}
+\author{Oliver Chmurzynski, Leon Büttinghaus, Thilo Röthemeyer}
 \title{Soft Actor Critic}
 %\setbeamercovered{transparent} 
 %\setbeamertemplate{navigation symbols}{} 
