--- a/beamer/Bibliography.bib
+++ b/beamer/Bibliography.bib
@@ -39,3 +39,12 @@
   biburl        = {https://dblp.org/rec/journals/corr/abs-1801-01290.bib},
   bibsource     = {dblp computer science bibliography, https://dblp.org}
 }
+
+@misc{autoencoding,
+      title={Auto-Encoding Variational Bayes}, 
+      author={Diederik P Kingma and Max Welling},
+      year={2014},
+      eprint={1312.6114},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
