--- a/beamer/SACbeamer.tex
+++ b/beamer/SACbeamer.tex
@@ -39,6 +39,7 @@
 \section{Literaturverzeichnis}
 \begin{frame}
 \nocite{SAC18}
+\nocite{autoencoding}
 \bibliography{Bibliography}
 \bibliographystyle{alpha}
 \end{frame}
