better for beamer frames

--- a/beamer/Part_3.tex
+++ b/beamer/Part_3.tex
@@ -7,8 +7,8 @@
         {\small
         \SetAlgoLined
         Input $\theta_{1}$,$\theta_{2}$ ,$\phi$\\
-        $\overline{\theta_{1}} \leftarrow  \theta_{1}$\\
-        $\overline{\theta_{2}} \leftarrow \theta_{2}$\\
+        $\overline{\theta_{1}} \leftarrow  \theta_{1}$ ,
+        $\overline{\theta_{2}} \leftarrow \theta_{2}$ ,
         $\mathcal{D} \leftarrow \emptyset$\\
         \For{each iteration}{
              \For{each environment step}{
