Folien ergänzt und yupter notebook angepasst

--- a/beamer/Bibliography.bib
+++ b/beamer/Bibliography.bib
@@ -48,3 +48,11 @@
       archivePrefix={arXiv},
       primaryClass={stat.ML}
 }
+@misc{picturesrllab,
+  author       = {Sam Kirkles},
+  title        = {HalfCheetah},
+  howpublished = {Youtube},
+  year         = {2018},
+  url          = {https://www.youtube.com/watch?v=2lf-3tgWiUc},        
+  
+}
