--- a/beamer/Part_3.tex
+++ b/beamer/Part_3.tex
@@ -67,6 +67,19 @@
     
 \end{frame}
 
+\begin{frame}
+    \frametitle{Ergebnisse}
+    \includegraphics[width=.3\textwidth, height=0.4\textheight]{figures/rllab/Humanoid-v1.PNG}\hfill
+    \includegraphics[width=.3\textwidth, height=0.4\textheight]{figures/rllab/Humanoid-v2.PNG}\hfill
+    \includegraphics[width=.3\textwidth, height=0.4\textheight]{figures/rllab/halcheeathPNG.PNG}
+
+    \includegraphics[width=.3\textwidth, height=0.4\textheight]{figures/rllab/Hopper.PNG}\hfill
+    \includegraphics[width=.3\textwidth, height=0.4\textheight]{figures/rllab/antv2.PNG}\hfill
+    \includegraphics[width=.3\textwidth, height=0.4\textheight]{figures/rllab/walker.PNG}\hfill \\
+    \cite{picturesrllab}
+\end{frame}
+
+
 \subsection{Vergleich mit anderen Algortihmen}
 \note{
     DDPG = Deep Deterministic Policy Gradiend 
