--- a/beamer/SACbeamer.tex
+++ b/beamer/SACbeamer.tex
@@ -38,10 +38,13 @@
 
 \section{Literaturverzeichnis}
 \begin{frame}
+{\footnotesize
+\nocite{SAC19}
 \nocite{SAC18}
 \nocite{autoencoding}
+\nocite{grokking}
 \bibliography{Bibliography}
-\bibliographystyle{alpha}
+\bibliographystyle{alpha}}
 \end{frame}
 
 \end{document}
