--- a/beamer/Bibliography.bib
+++ b/beamer/Bibliography.bib
@@ -1,4 +1,4 @@
-@article{DBLP:journals/corr/abs-1812-05905,
+@article{SAC19,
   author        = {Tuomas Haarnoja and
                Aurick Zhou and
                Kristian Hartikainen and
@@ -47,4 +47,14 @@
       eprint={1312.6114},
       archivePrefix={arXiv},
       primaryClass={stat.ML}
+}
+
+@book{grokking,
+author = {Trask, Andrew},
+title = {Grokking Deep Learning},
+year = {2019},
+isbn = {1617293709},
+publisher = {Manning Publications Co.},
+address = {USA},
+edition = {1st}
 }
