--- a/Code/SAC2019.ipynb
+++ b/Code/SAC2019.ipynb
@@ -21,7 +21,7 @@
   "cells": [
     {
       "source": [
-        "Aufgaben:\n",
+        "#Aufgaben:\n",
         "\n",
         "0) optional - führt das Notbook aus und schaut euch die Ergebnisse an \n",
         "\n",
@@ -57,7 +57,7 @@
     },
     {
       "source": [
-        "Initialize Parameter"
+        "#Initialize Parameter"
       ],
       "cell_type": "markdown",
       "metadata": {}
