--- a/Code/SAC2019.ipynb
+++ b/Code/SAC2019.ipynb
@@ -82,7 +82,7 @@
     },
     {
       "source": [
-        "Batch Train"
+        "#Batch Train"
       ],
       "cell_type": "markdown",
       "metadata": {}
@@ -128,6 +128,13 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "Q7gOX2DjREI5",
         "colab_type": "code",
@@ -168,6 +175,13 @@
       ],
       "execution_count": 9,
       "outputs": []
+    },
+    {
+      "source": [
+        "#Value Network"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
     },
     {
       "cell_type": "code",
@@ -258,6 +272,13 @@
       ],
       "execution_count": 10,
       "outputs": []
+    },
+    {
+      "source": [
+        "#SAC Agent"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
     },
     {
       "cell_type": "code",
@@ -386,6 +407,18 @@
       ],
       "execution_count": 11,
       "outputs": []
+    },
+    {
+      "source": [
+        "#Training"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
+      "source": [],
+      "cell_type": "markdown",
+      "metadata": {}
     },
     {
       "cell_type": "code",
