--- a/Code/SAC2019.ipynb
+++ b/Code/SAC2019.ipynb
@@ -21,7 +21,7 @@
   "cells": [
     {
       "source": [
-        "#Aufgaben:\n",
+        "# Aufgaben:\n",
         "\n",
         "0) optional - führt das Notbook aus und schaut euch die Ergebnisse an \n",
         "\n",
@@ -57,7 +57,7 @@
     },
     {
       "source": [
-        "#Initialize Parameter"
+        "# Initialize Parameter"
       ],
       "cell_type": "markdown",
       "metadata": {}
@@ -82,7 +82,7 @@
     },
     {
       "source": [
-        "#Batch Train"
+        "# Batch Train"
       ],
       "cell_type": "markdown",
       "metadata": {}
@@ -178,7 +178,7 @@
     },
     {
       "source": [
-        "#Value Network"
+        "# Networks"
       ],
       "cell_type": "markdown",
       "metadata": {}
@@ -275,7 +275,7 @@
     },
     {
       "source": [
-        "#SAC Agent"
+        "# SAC Agent"
       ],
       "cell_type": "markdown",
       "metadata": {}
@@ -410,7 +410,7 @@
     },
     {
       "source": [
-        "#Training"
+        "# Training"
       ],
       "cell_type": "markdown",
       "metadata": {}
