--- a/Code/SAC2019.ipynb
+++ b/Code/SAC2019.ipynb
@@ -46,13 +46,12 @@
         "import torch.nn.functional as F\n",
         "import torch.optim as optim\n",
         "from torch.distributions import Normal\n",
-        "\n",
         "import gym\n",
         "import random\n",
         "import numpy as np\n",
         "from collections import deque"
       ],
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -64,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -123,7 +122,7 @@
         "\n",
         "    return episode_rewards"
       ],
-      "execution_count": 8,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -173,7 +172,7 @@
         "  def __len__(self):\n",
         "      return len(self.buffer)"
       ],
-      "execution_count": 9,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -270,7 +269,7 @@
         "\n",
         "        return action, log_pi"
       ],
-      "execution_count": 10,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -405,7 +404,7 @@
         "        #Ende Aufgabe 2\n",
         "        self.update_step += 1"
       ],
-      "execution_count": 11,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -435,62 +434,62 @@
         "# train\n",
         "episode_rewards = mini_batch_train(env, agent, 50, 500, 64)"
       ],
-      "execution_count": 12,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Episode 0: -1171.9602178842076\n",
-            "Episode 1: -1101.7620861792093\n",
-            "Episode 2: -1122.1872643240113\n",
-            "Episode 3: -1294.3481632440203\n",
-            "Episode 4: -1759.3703845520722\n",
-            "Episode 5: -1356.4502666260025\n",
-            "Episode 6: -1500.984591410819\n",
-            "Episode 7: -1320.647103306118\n",
-            "Episode 8: -1212.0872852203056\n",
-            "Episode 9: -1291.3399015750806\n",
-            "Episode 10: -1107.6232151291529\n",
-            "Episode 11: -866.1775234733441\n",
-            "Episode 12: -1110.6304073872304\n",
-            "Episode 13: -1161.5459371928148\n",
-            "Episode 14: -1239.386355651996\n",
-            "Episode 15: -1287.2316226834673\n",
-            "Episode 16: -1320.2151338280137\n",
-            "Episode 17: -1221.2788235661208\n",
-            "Episode 18: -1355.326540755907\n",
-            "Episode 19: -1323.0452540788656\n",
-            "Episode 20: -1199.34674783254\n",
-            "Episode 21: -1369.378486355314\n",
-            "Episode 22: -1340.584708079719\n",
-            "Episode 23: -1062.2855975842488\n",
-            "Episode 24: -1165.7217750501284\n",
-            "Episode 25: -1016.6747274864365\n",
-            "Episode 26: -990.805666811737\n",
-            "Episode 27: -1055.4523579373927\n",
-            "Episode 28: -1155.4432499538268\n",
-            "Episode 29: -1067.7886600277964\n",
-            "Episode 30: -1018.0807211059098\n",
-            "Episode 31: -843.1188791632236\n",
-            "Episode 32: -1069.9289382959955\n",
-            "Episode 33: -901.2655303976784\n",
-            "Episode 34: -1010.9870961361848\n",
-            "Episode 35: -759.0622542894515\n",
-            "Episode 36: -1501.6908770171076\n",
-            "Episode 37: -984.9792699659542\n",
-            "Episode 38: -743.3650679521302\n",
-            "Episode 39: -723.0373140664263\n",
-            "Episode 40: -700.8223853957359\n",
-            "Episode 41: -746.560485690792\n",
-            "Episode 42: -640.86651866753\n",
-            "Episode 43: -777.9549301037725\n",
-            "Episode 44: -882.9900784637279\n",
-            "Episode 45: -530.953577087372\n",
-            "Episode 46: -403.9978976736634\n",
-            "Episode 47: -7.025296123253685\n",
-            "Episode 48: -626.5620283464966\n",
-            "Episode 49: -630.6311709569446\n"
+            "Episode 0: -1175.2288072053614\n",
+            "Episode 1: -1156.6081386229298\n",
+            "Episode 2: -981.9939696418365\n",
+            "Episode 3: -1325.7570960621256\n",
+            "Episode 4: -1514.8417311586368\n",
+            "Episode 5: -1686.2116202376767\n",
+            "Episode 6: -1560.7234628736264\n",
+            "Episode 7: -1255.6478056136048\n",
+            "Episode 8: -1458.607518899463\n",
+            "Episode 9: -1253.9154947472118\n",
+            "Episode 10: -1011.8425582692248\n",
+            "Episode 11: -1253.337758709185\n",
+            "Episode 12: -1173.6968864365797\n",
+            "Episode 13: -924.5078927195033\n",
+            "Episode 14: -1078.0630374252219\n",
+            "Episode 15: -903.2607908675004\n",
+            "Episode 16: -1231.9929384520995\n",
+            "Episode 17: -729.6969326492107\n",
+            "Episode 18: -1069.7354052546896\n",
+            "Episode 19: -923.9648213602012\n",
+            "Episode 20: -909.7307791261634\n",
+            "Episode 21: -645.4904856152393\n",
+            "Episode 22: -1055.2615035940005\n",
+            "Episode 23: -250.29004174945496\n",
+            "Episode 24: -396.30596631272186\n",
+            "Episode 25: -1148.5821207343542\n",
+            "Episode 26: -240.37079208531776\n",
+            "Episode 27: -546.2589847145306\n",
+            "Episode 28: -926.9804718725264\n",
+            "Episode 29: -1322.1284332834\n",
+            "Episode 30: -701.0185111627345\n",
+            "Episode 31: -1017.4771230305029\n",
+            "Episode 32: -292.96943021265076\n",
+            "Episode 33: -246.82380760492117\n",
+            "Episode 34: -127.3836756696064\n",
+            "Episode 35: -126.89190973266628\n",
+            "Episode 36: -1.9866712266326263\n",
+            "Episode 37: -246.09183169362453\n",
+            "Episode 38: -383.0409080584362\n",
+            "Episode 39: -1701.8021190573124\n",
+            "Episode 40: -262.5530420377246\n",
+            "Episode 41: -117.72713602899815\n",
+            "Episode 42: -1718.4367828859722\n",
+            "Episode 43: -126.01682275901248\n",
+            "Episode 44: -259.5373008544668\n",
+            "Episode 45: -121.49922714418746\n",
+            "Episode 46: -126.72345673449772\n",
+            "Episode 47: -240.75922100943052\n",
+            "Episode 48: -121.34648725794034\n",
+            "Episode 49: -124.5435018934022\n"
           ]
         }
       ]
@@ -502,9 +501,19 @@
         "colab_type": "code",
         "colab": {}
       },
-      "source": [],
-      "execution_count": 0,
-      "outputs": []
+      "source": [
+        "%tensorboard --logdir summaries"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "UsageError: Line magic function `%tensorboard` not found.\n"
+          ]
+        }
+      ]
     }
   ]
 }
